base/alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: observability
  labels:
    app: alloy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 12345
      targetPort: 12345
      protocol: TCP
  selector:
    app: alloy
